Fixando value no filtro de data

--- a/country.html
+++ b/country.html
@@ -46,6 +46,7 @@
                 type="date"
                 name="date_start"
                 id="date_start"
+                value="2021-05-01"
                 min="2020-01-01"
               />
               <h3>Data fim</h3>
@@ -54,6 +55,7 @@
                 type="date"
                 name="date_end"
                 id="date_end"
+                value="2021-05-26"
                 min="2020-01-01"
               />
               <h3>País</h3>
