arrumando erro de merge

--- a/country.html
+++ b/country.html
@@ -118,6 +118,6 @@
     </div>
 
     <!-- Project Analytics -->
-    <script src="/assets/js/country.js"></script>
+    <script type="module" src="/assets/js/country.js"></script>
   </body>
 </html>
